record transactions
