# pkg/api/render.go
@@ -21,3 +21,13 @@ func (b *BalanceItem) Render(w http.ResponseWriter, r *http.Request) error {
 func (b *BalanceList) Render(w http.ResponseWriter, r *http.Request) error {
 	return nil
 }
+
+// Render implements the render.Renderer interface for use with chi-router
+func (b *Transaction) Render(w http.ResponseWriter, r *http.Request) error {
+	return nil
+}
+
+// Render implements the render.Renderer interface for use with chi-router
+func (b *TransactionList) Render(w http.ResponseWriter, r *http.Request) error {
+	return nil
+}
